@@ -1,5 +1,10 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* Makefile.am (dist-hook): New target.
+	(EXTRA_DIST): New variable.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* po/pl.po: Merged with dpkg-man.pot.
 
 2007-05-08  Guillem Jover  <guillem@debian.org>
