@@ -1,3 +1,8 @@
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
+	* Makefile.am (EXTRA_DIST): Rename debian/pseudo-tags to
+	debian/usertags.
+
 2007-05-07  Guillem Jover  <guillem@debian.org>
 
 	* ostable: Add gnueabi-linux.
